# Flying_Fader

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
CAD/: 2024-05-20T173932.xlsx  Fader_Library.bak  Fader_Library.kicad_sym  Flying_Fader.brd  Flying_Fader.kicad_pcb  Flying_Fader.kicad_prl  Flying_Fader.kicad_pro  Flying_Fader.kicad_sch  Flying_Fader.round-tracks-config  Flying_Fader_BOM.csv  Flying_Fader_BOM.xlsx  Flying_Fader_brd.sqlite3  Screen Clamp Short.step  Screen Clamp.step  Screen Clamps.3mf  Top Panel Lower.3mf  Top Panel Lower.step  Top Panel Upper.3mf  Top Panel Upper.step  Top Panel.3mf  Top Panel.step  cat.kicad_mod  fp-info-cache  fp-lib-table  pcbnew2boardview.py  sym-lib-table
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/: NHD-0216SZW-BG5.epw  part_info.txt
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/3D/: NHD-0216SZW-BG5.stp
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/Allegro/: NHD0216SZWBG5.dra  c180_h120.pad  c555_h370.pad  nhd0216szwbg5.psm
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/CADSTAR/: NHD-0216SZW-BG5.csa  NHD-0216SZW-BG5.lib  NHD0216SZWBG5.cpa
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/CR-5000/: NHD-0216SZW-BG5.laf  NHD0216SZWBG5.ftf
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/CR-8000/: NHD-0216SZW-BG5.cdf  NHD0216SZWBG5.pkf
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/Capture/: NHD-0216SZW-BG5.xml
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/DEHDL/nhd_0216szw_bg5/chips/: chips.prt
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/DEHDL/nhd_0216szw_bg5/part_table/: part.ptf
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/DEHDL/nhd_0216szw_bg5/sym_1/: symbol.css
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/DesignSpark PCB PRO/: NHD-0216SZW-BG5.dsl
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/DipTrace/: NHD-0216SZW-BG5.asc
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/KiCad/: NHD-0216SZW-BG5.dcm  NHD-0216SZW-BG5.kicad_sym  NHD-0216SZW-BG5.lib  NHD-0216SZW-BG5.mod  NHD0216SZWBG5.kicad_mod
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/OrCAD_Allegro16/: NHD-0216SZW-BG5.edf  footprint.scr  padstack2.scr
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/PADS/: NHD-0216SZW-BG5.asc  NHD-0216SZW-BG5.c  NHD-0216SZW-BG5.p  NHD0216SZWBG5.d
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/Proteus/: NHD-0216SZW-BG5.pdif  NHD-0216SZW-BG5.pdspart
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/Pulsonix/: NHD-0216SZW-BG5.plx
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/Quadcept/: NHD-0216SZW-BG5.xml
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/SOLIDWORKS PCB/: NHD-0216SZW-BG5.lbr
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/TARGET 3001!/: NHD-0216SZW-BG5.cxf
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/Xpedition/: NHD-0216SZW-BG5.1  cell.hkp  padstacks.hkp  pdb.hkp
CAD/LIB_NHD-0216SZW-BG5/NHD-0216SZW-BG5/eCADSTAR/: NHD-0216SZW-BG5.parta  NHD-0216SZW-BG5.symba  NHD0216SZWBG5.foota  NHD0216SZWBG5.packa
CAD/LIB_PSM01-082A-103B2/PSM01-082A-103B2/EAGLE/: PSM01-082A-103B2.lbr
CAD/LIB_PSM01-082A-103B2/PSM01-082A-103B2/KiCad/: PSM01-082A-103B2.dcm  PSM01-082A-103B2.kicad_sym  PSM01-082A-103B2.lib  PSM01-082A-103B2.mod  PSM01082A103B2.kicad_mod
CAD/LIB_PSM01-082A-103B2/PSM01-082A-103B2/KiCad/Fader.pretty/: IC12_MP6550_MNP-L.kicad_mod  IC12_MP6550_MNP-M.kicad_mod  IC12_MP6550_MNP.kicad_mod  PSM01082A103B2.kicad_mod  cat.kicad_mod
CAD/MP6550GG_Z/KiCADv6/: 2024-05-13_17-22-08.kicad_sym
CAD/MP6550GG_Z/KiCADv6/footprints.pretty/: IC12_MP6550_MNP-L.kicad_mod  IC12_MP6550_MNP-M.kicad_mod  IC12_MP6550_MNP.kicad_mod
CAD/TPS61169DCKR/: SOT65P210X110-5N.kicad_mod  TPS61169DCKR.kicad_sym
CAD/gerbers/: Flying_Fader-B_Mask.gbr  Flying_Fader-B_Paste.gbr  Flying_Fader-B_Silkscreen.gbr  Flying_Fader-Back.gbr  Flying_Fader-Edge_Cuts.gbr  Flying_Fader-F_Mask.gbr  Flying_Fader-F_Paste.gbr  Flying_Fader-F_Silkscreen.gbr  Flying_Fader-Front.gbr  Flying_Fader-NPTH-drl.gbr  Flying_Fader-NPTH-drl_map.gbr  Flying_Fader-PTH-drl.gbr  Flying_Fader-PTH-drl_map.gbr
CAD/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
SampleSong/: Sample_Song.als
src/: main.rs
