[[bin]] # prevent "Can't find crate for 'test'" error
name = "flying_fader"
test = false
bench = false

[package]
name = "flying_fader"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32h7a3vi", "split-pc2", "split-pc3", "time-driver-any", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.5.0" }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] } # used to have "task-arena-size-32768" and "intergrated-timers". but that seems to be integrated and no longer an option
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
stm32-metapac = { version = "18.0.0", features = ["stm32h7a3vi"]}

defmt = "1.0.1"
defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = { version = "0.8.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.31", default-features = false }
heapless = { version = "0.8", default-features = false }
rand_core = "0.9.3"
critical-section = "1.1"
micromath = "2.1.0"
nb = "1.1.0"
stm32-fmc = "0.3.0"
usbd-hid = "0.8.2"
embedded-storage = "0.3.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
pid = { version = "4.0.0"}
document-features = { version = "0.2.12" }

# to get current commit: git ls-remote https://github.com/embassy-rs/embassy.git HEAD
#embassy-time ="}
[patch.crates-io]
# to get current commit: git ls-remote https://github.com/embassy-rs/embassy.git HEAD
#embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
#embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
